# log

./: .gitignore  CMakeLists.txt
src/: log.hpp
